обновил openapi спеку и добавил /api/v1/admin/login GET эндпоинт для проверки админского пароля
